use a thread pool for parallel stream