@@ -7,8 +7,10 @@ package com.blazartech.MultiDroolsDemo;
 import com.blazartech.MultiDroolsDemo.comp.data.CompensableEvent;
 import com.blazartech.MultiDroolsDemo.comp.data.CompensationRecord;
 import com.blazartech.MultiDroolsDemo.comp.process.drools.DroolsCalculationService;
+import jakarta.inject.Provider;
 import java.util.Collection;
-import java.util.stream.Collectors;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.ForkJoinPool;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -25,7 +27,7 @@ import org.springframework.stereotype.Component;
 public class LargeCalcParallelCommandLineRunner extends LargeCalcDemoBase implements CommandLineRunner {
 
     private static final Logger logger = LoggerFactory.getLogger(LargeCalcParallelCommandLineRunner.class);
-    
+
     @Autowired
     private DroolsCalculationService calcService;
 
@@ -33,13 +35,21 @@ public class LargeCalcParallelCommandLineRunner extends LargeCalcDemoBase implem
         return calcService.deriveCompensationForCompensableEvent(event);
     }
 
+    @Autowired
+    private Provider<ForkJoinPool> forkJoinPool;
+
     @Override
     public Collection<CompensationRecord> calculateCompensation(Collection<CompensableEvent> compensableEvents) {
-        
-        return compensableEvents.parallelStream() // run the calculation for each comp event separately and in parallel
-                .map(e -> calculateCompensation(e))
-                .flatMap(c -> c.stream())
-                .collect(Collectors.toList());
+
+        try (ForkJoinPool threadPool = forkJoinPool.get()) {
+            return threadPool.submit(
+                    () -> compensableEvents.parallelStream() // run the calculation for each comp event separately and in parallel
+                            .map(e -> calculateCompensation(e))
+                            .flatMap(c -> c.stream())
+                            .toList()).get();
+        } catch (ExecutionException | InterruptedException e) {
+            throw new RuntimeException("error processing reuqest: " + e.getMessage(), e);
+        }
     }
 
     @Override
